crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Tests_for_a_variety_…_-_Only_positional_(3dc93b1709eb3be9).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Tests for a variety of argument types - Only positional
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(x: int, y: int, z: int, /) -> int:
2 |     return x * y * z
3 | 
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:4:8
  |
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(x: int, y: int, z: int, /) -> int:
  |     ^^^         ------ Parameter declared here
  |

```
